apps/tufkin/mailpit.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailpit
  namespace: tufkin
  labels:
    app: mailpit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailpit
  template:
    metadata:
      labels:
        app: mailpit
    spec:
      containers:
        - name: mailpit
          image: axllent/mailpit:latest
          ports:
            - containerPort: 1025
              name: smtp
            - containerPort: 8025
              name: web
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: mailpit
  namespace: tufkin
  labels:
    app: mailpit
spec:
  ports:
    - port: 1025
      targetPort: 1025
      protocol: TCP
      name: smtp
    - port: 8025
      targetPort: 8025
      protocol: TCP
      name: web
  selector:
    app: mailpit
