apps/tufkin/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tufkin
  namespace: tufkin
  labels:
    app: tufkin
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: tufkin
